...
        imvScan.image = #imageLiteral(resourceName: "scan").tint(with: #colorLiteral(red: 1.0, green: 1.0, blue: 1.0, alpha: 1.0))
        view.bringSubview(toFront: vwContent)
    }

    fileprivate func found(code: String) {
        let ac = UIAlertController(title: "Found a QRCode", message: "Text is: \(code)", preferredStyle: .alert)
        ac.addAction(UIAlertAction(title: "OK", style: .default, handler: { action in
            self.dismiss(animated: true)
        }))
        present(ac, animated: true)
    }
    
    private func failed() {
...
