...
                                                    <rect key="frame" x="67" y="142" width="200" height="21"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" priority="750" constant="40" id="S6s-VT-Ch7"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <inset key="contentEdgeInsets" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
                                                    <state key="normal" title="LOGIN">
                                                        <color key="titleColor" red="0.72549019607843135" green="0.6588235294117647" blue="0.058823529411764705" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    </state>
                                                    <connections>
                                                        <action selector="processLoginEmailPassword:" destination="-1" eventType="touchUpInside" id="yJV-42-HnA"/>
                                                    </connections>
                                                </button>
...
